# gj-gpu-benchmark

./: .gitignore  CMakeLists.txt  gauss_jordan.cu  gj_utils.cpp  main.cpp  matrix.txt
include/: gj_utils.hpp  main.h  version.h
kernels/: CMakeLists.txt  cuda_utils.cu  gpu-utils.hpp  kernels_list.hpp
kernels/cuda/: cuda-utils.cu  cuda-utils.hpp
kernels/flawed/: gj-fa1.cu  gj-fa1.hip  gj-fa1.hpp  gj-flawed.hpp  gj-o.cu  gj-o.hpp  gj-oc.cu  gj-oc.hpp
kernels/flawed/include/: gj-cp.hpp  gj-da.hpp  gj-dl.hpp  gj-flawed.hpp  gj-ml.hpp  gj-oc.hpp  gj-op.hpp  gj-rc.hpp  gj-rl.hpp  gj-rm.hpp  gj-yl.hpp
kernels/flawed/src/: gj-cp.cu  gj-cp.hip  gj-da.cu  gj-da.hip  gj-dl.cu  gj-dl.hip  gj-ml.cu  gj-ml.hip  gj-oc.cu  gj-oc.hip  gj-op.cu  gj-op.hip  gj-rc.cu  gj-rc.hip  gj-rl.cu  gj-rl.hip  gj-rm.cu  gj-rm.hip  gj-yl.cu  gj-yl.hip
kernels/hip/: hip-utils.hip  hip-utils.hpp
kernels/reference/: gj-kernel.cu  gj-reference.cu  gj-reference.hip  gj-reference.hpp
kernels/utils/: CMakeLists.txt  kernels.hpp  matrix.cpp  matrix.hpp
scripts/: HowTo.md  comparison.ipynb  custom_hipify.py  new_bugg.py
